plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'tech.zolhungaj'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven {
		url = uri("https://maven.pkg.github.com/zolhungaj/amq-api")
		credentials {
			username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
			password = project.findProperty("gpr.key") ?: System.getenv("GPR_TOKEN")
		}
	}
}

dependencies {
	implementation ('tech.zolhungaj:amq-api:0.25.0'){
		// excluding simple-logging because I bring my own
		exclude group: 'org.slf4j', module: 'slf4j-simple'
	}
	implementation 'org.json:json:20240303'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'

	//for text distance
	implementation 'org.apache.commons:commons-text:1.12.0'

	testCompileOnly 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
//	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}



tasks.named('test') {
	useJUnitPlatform()
}
